[gd_scene load_steps=8 format=3 uid="uid://dsuu5u567s1hn"]

[ext_resource type="Texture2D" uid="uid://bwwffq27ggcqk" path="res://assets/effects/sd-fire.png" id="1_k57l2"]
[ext_resource type="Script" path="res://scripts/spells/scenes/firey_blast.gd" id="2_08vgw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7sel1"]
atlas = ExtResource("1_k57l2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1waeb"]
atlas = ExtResource("1_k57l2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkkq0"]
atlas = ExtResource("1_k57l2")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wrlkp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sel1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1waeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkkq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sel1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1waeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkkq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sel1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1waeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkkq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sel1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1waeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkkq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sel1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1waeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkkq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sel1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1waeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkkq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sel1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1waeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkkq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sel1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1waeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkkq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sel1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1waeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkkq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sel1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1waeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkkq0")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cjh0e"]
radius = 5.19089

[node name="FireyBlast" type="Node2D"]
scale = Vector2(16, 16)
script = ExtResource("2_08vgw")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-0.5, -4.0625)
sprite_frames = SubResource("SpriteFrames_wrlkp")

[node name="CollisionArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 3

[node name="CollisionShape" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(0, -0.5)
shape = SubResource("CircleShape2D_cjh0e")

[connection signal="area_entered" from="CollisionArea" to="." method="_on_area_2d_area_entered"]
